--- a/src/main/resources/com/fitj/views/produits/programmes/programmesNutritions/detail-programmeNutrition.fxml
+++ b/src/main/resources/com/fitj/views/produits/programmes/programmesNutritions/detail-programmeNutrition.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
+<?import javafx.scene.layout.AnchorPane?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerDetailProgrammeNutrition">
     <children>
         <Pane layoutX="139.0" layoutY="213.0" prefHeight="461.0" prefWidth="725.0" style="-fx-background-color: lightgrey;" styleClass="emptyRectangle">
@@ -46,21 +46,11 @@
                 <Font size="34.0" />
             </font>
         </Text>
-        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+        <AnchorPane>
             <children>
-                <fx:include source="../../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../../components/headers/header.fxml" />
             </children>
-        </VBox>
-        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../../components/headers/header-coach.fxml" />
-            </children>
-        </VBox>
-        <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../../components/headers/header-client.fxml" />
-            </children>
-        </VBox>
+        </AnchorPane>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
         <Button fx:id="updateProgrammeNutritionButton" layoutX="381.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
         <Button fx:id="deleteProgrammeNutritionButton" layoutX="504.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
