--- a/src/main/resources/com/fitj/views/admins/clients-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/clients-admin.fxml
@@ -7,7 +7,11 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <fx:include source="../../components/headers/header-admin.fxml" />
+      <AnchorPane>
+         <children>
+            <fx:include source="../../components/headers/header.fxml" />
+         </children>
+      </AnchorPane>
       <AnchorPane layoutX="49.0" layoutY="143.0" prefHeight="599.0" prefWidth="902.0">
          <children>
             <fx:include source="../../components/clients/list-client.fxml" />
