--- a/src/main/resources/com/fitj/views/coachs/mesClients-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/mesClients-coach.fxml
@@ -5,7 +5,11 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <fx:include source="../../components/headers/header-coach.fxml" />
+       <AnchorPane>
+           <children>
+               <fx:include source="../../components/headers/header.fxml" />
+           </children>
+       </AnchorPane>
       <AnchorPane layoutX="50.0" layoutY="85.0">
             <children>
                 <fx:include source="../../components/clients/list-mesClient.fxml" fx:id="clientList"/>
