--- a/src/main/resources/com/fitj/views/exercices/create-exercice.fxml
+++ b/src/main/resources/com/fitj/views/exercices/create-exercice.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.AnchorPane?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
+        <AnchorPane>
             <children>
-                <fx:include source="../../components/headers/header-admin.fxml" />
+                <fx:include source="../../components/headers/header.fxml" />
             </children>
-        </VBox>
-      <Pane layoutX="1.0" layoutY="55.0" prefHeight="746.0" prefWidth="1000.0">
+        </AnchorPane>
+      <AnchorPane layoutX="1.0" layoutY="55.0" prefHeight="746.0" prefWidth="1000.0">
         <children>
           <fx:include source="../../components/exercices/create-exercice.fxml" />
         </children>
-      </Pane>
+      </AnchorPane>
     </children>
 </Pane>
