--- a/src/main/resources/com/fitj/views/materiels/create-materiel.fxml
+++ b/src/main/resources/com/fitj/views/materiels/create-materiel.fxml
@@ -3,10 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.layout.AnchorPane?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerAddMateriel">
     <children>
       <Pane layoutX="138.0" layoutY="258.0" prefHeight="285.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
@@ -17,7 +17,8 @@
                </font>
             </Text>
             <TextField fx:id="materielName" layoutX="132.0" layoutY="117.0" prefHeight="26.0" prefWidth="461.0" styleClass="emptyRectangle" />
-         </children></Pane>
+         </children>
+      </Pane>
       <Text fill="#054371" layoutX="315.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Créer un nouveau materiel">
          <font>
             <Font size="34.0" />
@@ -28,11 +29,11 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
-         <children>
-             <fx:include source="../../components/headers/header-admin.fxml" />
-         </children>
-      </VBox>
+        <AnchorPane>
+            <children>
+                <fx:include source="../../components/headers/header.fxml" />
+            </children>
+        </AnchorPane>
       <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
     </children>
 </Pane>
