--- a/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/detail-programmeSportif.fxml
+++ b/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/detail-programmeSportif.fxml
@@ -42,21 +42,11 @@
                 <Font size="34.0" />
             </font>
         </Text>
-        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+        <AnchorPane>
             <children>
-                <fx:include source="../../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../../components/headers/header.fxml" />
             </children>
-        </VBox>
-        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../../components/headers/header-coach.fxml" />
-            </children>
-        </VBox>
-        <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../../components/headers/header-client.fxml" />
-            </children>
-        </VBox>
+        </AnchorPane>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
         <Button fx:id="updateProgrammeSportifButton" layoutX="381.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
         <Button fx:id="deleteProgrammeSportifButton" layoutX="504.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
