--- a/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/update-programmeSportif.fxml
+++ b/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/update-programmeSportif.fxml
@@ -60,16 +60,11 @@
                 <Font size="16.0" />
             </font>
         </Button>
-        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+        <AnchorPane>
             <children>
-                <fx:include source="../../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../../components/headers/header.fxml" />
             </children>
-        </VBox>
-        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../../components/headers/header-coach.fxml" />
-            </children>
-        </VBox>
+        </AnchorPane>
         <Text fx:id="errorText" fill="RED" layoutX="137.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
     </children>
 </Pane>
